<resources>
    <string name="app_name">Bistro</string>
    <string name="label_must_fill">Required.</string>
    <string name="password_characters">password characters 6.</string>
    <string name="empty_user">Username cannot be empty</string>
    <string name="nothing_chng">Nothing has changed</string>
    <string name="loading_save">Please Wait Save Profil</string>
    <string name="compressing">Please Wait Compres</string>
    <string name="do_you_want_logout">Are You Sure You Want To Logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout">Logout</string>
    <string name="password_didn_t_match">Password_didn_t_match</string>
    <string name="banda_nira">Banda Nira</string>
    <string name="maluku_indonesia">Maluku Indonesia</string>
    <string name="categoty">Categoty</string>
    <string name="todo">TODO</string>
    <string name="bakery">Bakery</string>
    <string name="file_resto_is_empty">File Resto Is Empty</string>
    <string name="brunch_dining">Brunch Dining</string>
    <string name="caffee">Caffee</string>
    <string name="name_resto">Name Resto</string>
    <string name="jl_jangli_gabeng">Jl Jangli Gabeng</string>
    <string name="contact_08976690">Contact: 08976690</string>
    <string name="contact_via_whatsapp">Contact Via WhatsApp</string>
    <string name="order_a_table">Order a Table</string>
    <string name="show_menu">Show Menu</string>
    <string name="address">Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng Jl Jangli Gabeng</string>
    <string name="location">Location</string>
    <string name="open_maps">Open Maps</string>
    <string name="dining">Dining</string>
    <string name="password_old">Password Old</string>
    <string name="password">Password</string>
    <string name="password_new">Password New</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="edit_password">Edit Password</string>
    <string name="username">Username</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="fast_food">Fast Food</string>
    <string name="phone_email">Phone/Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have An Account?</string>
    <string name="register">Register</string>
    <string name="lunch_dining">Lunch Dining</string>
    <string name="pizza">Pizza</string>
    <string name="phone_email_empty">Phone/Email empty</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saved_restaurants">Saved Restaurants</string>
    <string name="ramen_dining">Ramen Dining</string>
    <string name="password_didnt_match">Password didnt match</string>
    <string name="order_table">Order Table</string>
    <string name="menu">Menu</string>
    <string name="todo2">TODO</string>

</resources>