<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.maruchan.ui.login.LoginActivity">

        <ImageView
            android:id="@+id/login_long"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_margin="@dimen/_5sdp"
            android:labelFor="@+id/login_long"
            android:scaleType="fitXY"
            android:src="@drawable/img_login"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/phone_email"
            android:textColor="@color/army"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/custome_background_search"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="start"
            android:hint="Phone or Email"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/army"
            android:textSize="@dimen/_12ssp"
            tools:ignore="Autofill,HardcodedText,LabelFor,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppinsregular"
            android:text="Password"
            android:textColor="@color/army"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/army">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="password"
                android:background="@drawable/custome_background_search"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/army"
                android:textSize="@dimen/_12ssp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_login_"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_190sdp"
            android:background="@drawable/custom_layout_login"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/tv_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:foreground="?selectableItemBackground"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </LinearLayout>
</layout>
