<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/transparant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_layout_frame_password"
            android:orientation="vertical">

            <TextView
                android:id="@+id/do_you_want_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"

                android:text="@string/do_you_want_logout"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/btn_no"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_layout_profile"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/btn_yes"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/custom_layout_profile_edit"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>
