<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="edit"
            type="com.maruchan.ui.edit.EditProfilrActivity" />

        <variable
            name="user"
            type="com.maruchan.bistro.data.room.user.User" />

        <variable
            name="photo"
            type="String" />

        <variable
            name="imageFileEdit"
            type="java.io.File" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_profile"
        tools:context="com.maruchan.ui.profile.ProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:labelFor="@+id/btn_back"
                android:scaleType="fitXY"
                android:src="@drawable/img_back_profile"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/edit_profile_img"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:labelFor="@+id/edit_profile_img"
                android:scaleType="fitXY"
                android:src="@drawable/img_edit_password"
                tools:ignore="ContentDescription" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/password_old"
                android:textColor="@color/army"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/army">

                <EditText
                    android:id="@+id/et_password_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custome_background_search"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/army"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/password_new"
                android:textColor="@color/army"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/army">

                <EditText
                    android:id="@+id/et_password_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custome_background_search"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/army"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/confirm_password"
                android:textColor="@color/army"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/army">

                <EditText
                    android:id="@+id/et_confirmasi_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custome_background_search"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/army"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_password_not_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="start"
                android:text="@string/password_didn_t_match"
                android:textColor="@color/text_red"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/custom_layout_profile"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/confirm_changes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
